# ros2_jazzy_autorace_simulation

./: README.md
turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_gazebo/include/turtlebot3_gazebo/: traffic_bar_plugin.hpp  traffic_light_plugin.hpp
turtlebot3_gazebo/launch/: spawn_turtlebot3.launch.py  turtlebot3_autorace.launch.py
turtlebot3_gazebo/map/: map.pgm  map.yaml
turtlebot3_gazebo/models/turtlebot3_autorace/course/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_bar/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_construction/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_intersection/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_left/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_light/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_parking/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_right/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_stop/: model.sdf
turtlebot3_gazebo/models/turtlebot3_autorace/traffic_tunnel/: model.sdf
turtlebot3_gazebo/src/: traffic_bar_plugin.cpp  traffic_light_plugin.cpp
turtlebot3_gazebo/worlds/: turtlebot3_autorace.world
